@@ -1,5 +1,10 @@
 2010-09-13  Joel Brobecker  <brobecker@adacore.com>
 
+	* lynx-i386-low.c: New file.
+	* configure.srv: Add handling of i[34567]86-*-lynxos* targets.
+
+2010-09-13  Joel Brobecker  <brobecker@adacore.com>
+
 	* lynx-low.c (ptrace_request_to_str): Remove handling for
 	request values that have been removed in LynxOS 5.x.
 
